--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.36",
+    "axios": "^0.17.1",
     "meteor-node-stubs": "^0.3.2",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-live-clock": "^2.0.2",
+    "react-places-autocomplete": "^6.1.0",
+    "semantic-ui-react": "^0.78.2"
   }
 }
